--- a/templates/teamcity-agent.service.j2
+++ b/templates/teamcity-agent.service.j2
@@ -1,14 +1,24 @@
-#/lib/systemd/system
+# https://www.jetbrains.com/help/teamcity/setting-up-and-running-additional-build-agents.html#SettingupandRunningAdditionalBuildAgents-AutomaticAgentStartunderLinux
+
 [Unit]
-Description="TeamCity Agent"
+Description="TeamCity Agent {{ agent_index }}"
+After=network.target
 
 [Service]
-User={{ teamcity_agent_user }}
-ExecStartPre=". /etc/default/teamcity-agent"
-ExecStart={{ teamcity_agent_install_dir }}/bin/agent.sh run
-ExecStop={{ teamcity_agent_install_dir }}/bin/agent.sh stop
+Type=simple
+
+# Support agent upgrade as the main process starts a child and exits then
 RemainAfterExit=yes
-ExecStartPost='while ! tail -5 {{ teamcity_agent_install_dir }}/logs/teamcity-agent.log | grep "Updating agent parameters on the server"; do sleep 1 ; done; exec /usr/bin/curl -sS -X PUT --data "true" -H "Content-Type:text/plain" -u {{ teamcity_server_user_name }}:{{ teamcity_server_user_passwd }} http://{{ teamcity_agent_server_url }}:{{ teamcity_agent_server_port }}/app/rest/agents/{{ teamcity_agent_hostname }}/authorized'
+# Support agent upgrade as the main process gets SIGTERM during upgrade and that maps to exit code 143
+SuccessExitStatus=0 143
+
+User={{ teamcity_agent_account }}
+SyslogIdentifier=teamcity_agent{{ agent_index }}
+ExecStart={{ teamcity_agent_install_dir }}/agent{{ agent_index }}/bin/agent.sh run
+ExecStop={{ teamcity_agent_install_dir }}/agent{{ agent_index }}/bin/agent.sh stop
+
+RestartSec=5
+Restart=on-failure
 
 [Install]
 WantedBy=multi-user.target
