--- a/templates/teamcity.j2
+++ b/templates/teamcity.j2
@@ -4,7 +4,7 @@
 
 case "$1" in
 start|stop)
-for a in "{{ hostvars.localhost.teamcity_dest }}"/agent??
+for a in "{{ teamcity_agent_install_dir }}"/agent??
 do
 su -l -c "$a/bin/agent.sh $1" buildman
 done
