--- a/templates/teamcity-agent.service.j2
+++ b/templates/teamcity-agent.service.j2
@@ -1,7 +1,7 @@
 # https://www.jetbrains.com/help/teamcity/setting-up-and-running-additional-build-agents.html#SettingupandRunningAdditionalBuildAgents-AutomaticAgentStartunderLinux
 
 [Unit]
-Description="TeamCity Agent {{ agent_index }}"
+Description="TeamCity Agent {{ teamcity_single_agent_name }}"
 After=network.target
 
 [Service]
@@ -12,10 +12,10 @@ RemainAfterExit=yes
 # Support agent upgrade as the main process gets SIGTERM during upgrade and that maps to exit code 143
 SuccessExitStatus=0 143
 
-User={{ teamcity_agent_account }}
-SyslogIdentifier=teamcity_agent{{ agent_index }}
-ExecStart={{ teamcity_agent_install_dir }}/agent{{ agent_index }}/bin/agent.sh run
-ExecStop={{ teamcity_agent_install_dir }}/agent{{ agent_index }}/bin/agent.sh stop
+User={{ teamcity_build_username }}
+SyslogIdentifier={{ teamcity_single_agent_name }}
+ExecStart={{ teamcity_single_agent_install_dir }}/bin/agent.sh run
+ExecStop={{ teamcity_single_agent_install_dir }}/bin/agent.sh stop
 
 RestartSec=5
 Restart=on-failure
