--- a/templates/buildAgent.properties.j2
+++ b/templates/buildAgent.properties.j2
@@ -11,7 +11,7 @@ serverUrl={{ teamcity_server_url }}
 ## The unique name of the agent used to identify this agent on the TeamCity server
 ## Use blank name to let server generate it.
 ## By default, this name would be created from the build agent's host name
-name={{ teamcity_single_agent_name }}
+name={{ item.teamcity_agent_name }}
 
 ## Container directory to create default checkout directories for the build configurations.
 ## TeamCity agent assumes ownership of the directory and will delete unknown directories inside.
@@ -32,7 +32,7 @@ systemDir=../system
 
 ## A token which is used to identify this agent on the TeamCity server for agent authorization purposes.
 ## It is automatically generated and saved back on the first agent connection to the server.
-authorizationToken={{ _teamcity_agent_token | default("''") }}
+authorizationToken=
 
 
 ######################################
