fixed macos not starting DO-659

--- a/templates/jetbrains.teamcity.BuildAgent.plist.j2
+++ b/templates/jetbrains.teamcity.BuildAgent.plist.j2
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>WorkingDirectory</key>
-	<string>{{ teamcity_agent_install_dir }}</string>
+	<string>{{ teamcity_agent_install_dir }}/{{ item.teamcity_agent_name }}</string>
 	<key>Debug</key>
 	<false/>
 	<key>Label</key>
