--- a/templates/wrapper.conf.j2
+++ b/templates/wrapper.conf.j2
@@ -8,7 +8,7 @@
 ###
 #####################################################################
 
-wrapper.java.command=java
+wrapper.java.command=java.exe
 
 wrapper.java.mainclass=org.tanukisoftware.wrapper.WrapperSimpleApp
 
@@ -123,7 +123,7 @@ wrapper.ntservice.dependency.1=
 wrapper.ntservice.starttype=AUTO_START
 
 # Allow the service to interact with the desktop.
-wrapper.ntservice.interactive=true
+wrapper.ntservice.interactive=
 
 # User Account running the server
 wrapper.ntservice.account="{{ teamcity_build_username }}"
